# housing_prices_dashboard

./: .env.example  .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
migrations/: env.py
migrations/versions/: 20260118_113019_create_api_keys_table.py  20260118_122109_create_prediction_logs_table.py
src/: __init__.py  config.py  constants.py  main.py
src/auth/: dependencies.py  repository.py  router.py  schema.py  service.py
src/core/: database.py  exceptions.py  logging.py  rate_limiter.py  security.py
src/health/: __init__.py  router.py
src/logs/: __init__.py  dependencies.py  repository.py  router.py  schema.py
src/ml/: __init__.py  model.py  preprocessing.py
src/models/: __init__.py  api_key.py  common.py  prediction_log.py
src/predictions/: __init__.py  dependencies.py  router.py  schema.py  service.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  conftest.py  test_auth_api.py  test_health_api.py  test_predictions_api.py
tests/unit/: conftest.py  test_config.py  test_schemas.py  test_security.py
